Replace the old logo in MaskGroup with better quality, fixing the overflow issue of video player, changes in quizes and navigation hard code

--- a/src/Features/Quiz/QuizResult/QuizResult.module.css
+++ b/src/Features/Quiz/QuizResult/QuizResult.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("/public/Quiz-result_bg.png");
+    background-image: url('/Quiz-result_bg.png');
     object-fit: cover;
     background-repeat: no-repeat;
     background-size: contain;
