--- a/src/components/Header/MaskGroup/MaskGroup.module.css
+++ b/src/components/Header/MaskGroup/MaskGroup.module.css
@@ -8,12 +8,18 @@
     position: relative;
 }
 .fimg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
     width: 50px;
     height: 50px;
+    background-color: #a1ffd1;
+    object-fit: cover;
+    border-radius: 180px;
 }
 
 .simg img{
