--- a/src/components/Lesson/Lesson.module.css
+++ b/src/components/Lesson/Lesson.module.css
@@ -32,6 +32,7 @@
     border-radius: 24px;
     height: 190px;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .lesson_video video{
